STATUS: Class A implemented, validation in progress
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>